--- a/src/tabContent.scss
+++ b/src/tabContent.scss
@@ -1,12 +1,12 @@
 @import "node_modules/azure-devops-ui/Core/_platformCommon.scss";
 
-#postman-ext-container {
+#portal-ext-container {
   font-family: $fontFamily;
 }
 .bolt-tabbar-tabs {
-    font-size: $fontSizeM;
-    margin-bottom: 10px;
-  }
+  font-size: $fontSizeM;
+  margin-bottom: 10px;
+}
 
 .card-success {
   color: $status-success-foreground;
